[project]
name = "renov-pilot02"
version = "0.1.0"
description = "Full test suite for Renovate: Majors vs Minors vs Up-to-Date"
requires-python = ">=3.8"
authors = [
    { name = "rai-wtag", email = "test@example.com" }
]

dependencies = [
    # --- OUTDATED MAJOR UPDATES ---
    # Target: Will create PRs immediately (or based on Major rules).
    "flask==1.0.0",           # Update to ~3.x (Major)
    "sqlalchemy==1.3.0",       # Update to ~2.x (Major)
    "celery==4.4.0",           # Update to ~5.x (Major update)
    "pandas==1.3.0",           # Update to ~2.x (Major update)
    # --- OUTDATED MINOR/PATCH UPDATES ---
    # Target: Will group these into ONE PR (scheduled for Sunday).
    "requests==2.25.0",        # Update to ~2.32.x (Minor)
    "marshmallow==3.15.0",      # Update to ~3.21.x (Minor)
    "cryptography==41.0.7",     # Update to ~42.0.x (Minor)
    "idna==3.3",               # Update to ~3.7 (Minor)
    # --- UP-TO-DATE DEPENDENCIES ---
    # Target: Should detect these and ignore them.
    "pydantic>=2.9.0",
    "click>=8.1.0",
    "rich>=13.9.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.6.0"
]
